<resources>
    <string name="app_name">Assignment2</string>
    <string name="no_recent_reminders">No Recent Reminders</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="disease_name">Disease Name</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="enter_medicine_name">Enter medicine name</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="view_current_medication">View Current Medication</string>
    <string name="schedule_a_time">Schedule a time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>